--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,47 @@
+# Built application files
+**/build/
+
+# Crashlytics configuations
+com_crashlytics_export_strings.xml
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Gradle generated files
+.gradle/
+
+# Signing files
+.signing/
+
+# User-specific configurations
+.idea/libraries/
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/.name
+.idea/compiler.xml
+.idea/copyright/profiles_settings.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/scopes/scope_settings.xml
+.idea/vcs.xml
 *.iml
-.gradle
-/.idea/workspace.xml
-/.idea/libraries
+
+# OS-specific files
 .DS_Store
-/build
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Gradle:
+.idea/gradle.xml
+.idea/libraries
+.idea/caches
+.idea/codeStyles/
+
 /captures
-/local.properties
+.externalNativeBuild 
+app/release/
