--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "com.kingbull.recorder"
@@ -27,7 +26,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-//      compile project(':om-recorder')
+    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation project(':om-recorder')
     implementation 'com.kailashdabhi:om-recorder:1.1.5'
 }
